tests/kuttl/tests/common/errors_cleanup_openstack.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mariadb
    cr: mariadb-openstack
    owner: mariadb-operator
  name: mariadb-openstack
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openstack-galera
---
apiVersion: v1
kind: Pod
metadata:
  name: openstack-galera-0
---
apiVersion: v1
kind: Pod
metadata:
  name: openstack-galera-1
---
apiVersion: v1
kind: Pod
metadata:
  name: openstack-galera-2
---
apiVersion: v1
kind: Service
metadata:
  name: openstack-galera
---
apiVersion: v1
kind: Endpoints
metadata:
  name: openstack-galera
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovn-northd
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ovncontroller
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    service: ovn-northd
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    service: ovsdbserver-nb
  name: ovsdbserver-nb-0
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    service: ovsdbserver-sb
  name: ovsdbserver-sb-0
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    openshift.io/scc: privileged
  generateName: ovn-controller-
  labels:
    service: ovn-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ovsdbserver-nb
  name: ovsdbserver-nb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ovsdbserver-nb
    statefulset.kubernetes.io/pod-name: ovsdbserver-nb-0
  name: ovsdbserver-nb-0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ovsdbserver-sb
  name: ovsdbserver-sb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ovsdbserver-sb
    statefulset.kubernetes.io/pod-name: ovsdbserver-sb-0
  name: ovsdbserver-sb-0
---
apiVersion: v1
kind: Pod
metadata:
  name: nova-api-0
---
apiVersion: v1
kind: Pod
metadata:
  name: nova-cell1-novncproxy-0
---
apiVersion: v1
kind: Pod
metadata:
  name: nova-metadata-0
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: SwiftProxy
---
apiVersion: v1
kind: Pod
metadata:
  name: swift-storage-0
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    openshift.io/scc: anyuid
  labels:
    service: neutron
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cinder-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: glance-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: barbican-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keystone-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neutron-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nova-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nova-novncproxy-cell1-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: placement-public
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: swift-public
